# CGL-Graphics

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ba679ff  LICENSE  README.md  build.sh  build_win.bat  conanfile.py
.github/workflows/: cmake-multi-platform.yml  cmake-windows.yml
cgl/: application.cpp  camera.cpp  context.cpp  corecontext.cpp  floorgenerator.cpp  framebuffer.cpp  grid.cpp  inputcontroller.cpp  logger.cpp  main.cpp  material.cpp  materialbuilder.cpp  node.cpp  normalmap.cpp  object.cpp  renderbuffer.cpp  rendercontext.cpp  renderer.cpp  resourcemanager.cpp  scene.cpp  shader.cpp  transform.cpp  uimanager.cpp  vertex.cpp  vertexbuffer.cpp  window.cpp
cgl/command/: commanddispatcher.cpp  movecommand.cpp
cgl/core/: camera.cpp  corecontext.cpp  engine.cpp  logger.cpp  object.cpp  rendercontext.cpp  transform.cpp
cgl/core/buffer/: vaobuffer.cpp  vaobufferbuilder.cpp
cgl/core/command/: commanddispatcher.cpp  movecommand.cpp
cgl/core/event/: event.cpp  inputcontroller.cpp
cgl/event/: event.cpp
cgl/graphics/: animationsystem.cpp  animationtrack.cpp  framebuffer.cpp  grid.cpp  normalmap.cpp  renderer.cpp  shader.cpp
cgl/graphics/material/: material.cpp  materialbuilder.cpp
cgl/graphics/mesh/2D/: line.cpp  rectangle.cpp
cgl/graphics/mesh/3D/: cube.cpp  sphere.cpp  terrain.cpp
cgl/graphics/mesh/common/: mesh.cpp  meshbuffer.cpp  meshbuilder.cpp
cgl/graphics/model/: modelloader.cpp
cgl/graphics/postprocess/: defaultpostprocessor.cpp  ipostprocesspass.cpp
cgl/graphics/scene/: node.cpp  scene.cpp
cgl/graphics/texture/: texture.cpp  texturebuilder.cpp  textureloader.cpp
cgl/graphics/vertex/: vertex.cpp  vertexbuffer.cpp
cgl/managers/: resourcemanager.cpp  scenemanager.cpp  uimanager.cpp
cgl/mesh/2D/: line.cpp  rectangle.cpp
cgl/mesh/3D/: cube.cpp  sphere.cpp
cgl/mesh/common/: mesh.cpp  meshbuffer.cpp  meshbuilder.cpp  meshcontroller.cpp
cgl/model/: model.cpp  modelloader.cpp
cgl/physics/: physicssystem.cpp  raycast.cpp  rayline.cpp
cgl/texture/: texture.cpp  texturebase.cpp  textureloader.cpp
cgl/tools/: backtrace.cpp  logger.cpp
cgl/tools/backtrace/: backtrace.cpp
cgl/ui/: frame.cpp  mainwindow.cpp
cgl/utility/: logger.cpp
cmake/CGLHelper/: CGLHelperConfig.cmake  CGLHelperConfigVersion.cmake  CGLHelperModuleLocation.cmake
examples/: CMakeLists.txt  blend.cpp  blend.h  cullface.cpp  cullface.h  floor.cpp  floor.h  geometryexample.cpp  geometryexample.h  geometrynormalexample.cpp  geometrynormalexample.h  instancing.cpp  instancing.h  lightscene.cpp  lightscene.h  modelload.cpp  modelload.h  normalmapexample.cpp  normalmapexample.h  planet.cpp  planet.h  quadrotonnel.cpp  quadrotonnel.h  shadowmap.cpp  shadowmap.h  skybox.cpp  skybox.h  solarsystem.cpp  solarsystem.h  stencil.cpp  stencil.h
include/cgl/: application.h  camera.h  context.h  corecontext.h  floorgenerator.h  framebuffer.h  grid.h  inputcontroller.h  material.h  materialbuilder.h  node.h  normalmap.h  object.h  rendercontext.h  renderer.h  resourcemanager.h  scene.h  scenemanager.cpp  shader.h  transform.h  uimanager.h  vertex.h  vertexbuffer.h  window.h
include/cgl/command/: commanddispatcher.h  createcubecommand.cpp  createcubecommand.h  icommand.h  movecommand.h
include/cgl/core/: camera.h  corecontext.h  engine.h  logger.h  object.h  rendercontext.h  transform.h
include/cgl/core/buffer/: vaobuffer.h  vaobufferbuilder.h
include/cgl/core/command/: commanddispatcher.h  commands.h  createcubecommand.h  icommand.h  movecommand.h
include/cgl/core/event/: event.h  inputcontroller.h
include/cgl/event/: event.h
include/cgl/graphics/: animationsystem.h  animationtrack.h  framebuffer.h  grid.h  normalmap.h  renderer.h  shader.h
include/cgl/graphics/material/: material.h  materialbuilder.h
include/cgl/graphics/mesh/: meshes2D.h  meshes3D.h
include/cgl/graphics/mesh/2D/: line.h  rectangle.h
include/cgl/graphics/mesh/3D/: cube.h  sphere.h  terrain.h
include/cgl/graphics/mesh/common/: mesh.h  meshbuffer.h  meshbuilder.h
include/cgl/graphics/model/: modelloader.h
include/cgl/graphics/postprocess/: defaultpostprocessor.h  ipostprocesspass.h
include/cgl/graphics/scene/: node.h  scene.h
include/cgl/graphics/texture/: texture.h  texturebuilder.cpp  texturebuilder.h  textureloader.h
include/cgl/graphics/vertex/: vertex.h  vertexbuffer.h
include/cgl/managers/: resourcemanager.h  scenemanager.h  uimanager.h
include/cgl/mesh/: meshes2D.h  meshes3D.h
include/cgl/mesh/2D/: line.h  rectangle.h
include/cgl/mesh/3D/: cube.h  sphere.h
include/cgl/mesh/common/: mesh.h  meshbuffer.h  meshbuilder.h  meshcontroller.h  meshglobals.h
include/cgl/model/: model.h  modelloader.h
include/cgl/physics/: physicssystem.h  raycast.h  rayline.h
include/cgl/texture/: texture.h  texturebase.h  textureloader.h
include/cgl/tools/: backtrace.h  logger.h
include/cgl/tools/backtrace/: backtrace.h
include/cgl/ui/: frame.h  mainwindow.h
include/cgl/utility/: logger.h
shaders/: blend.frag  blend.vert  brick.frag  brick.vert  cpuheight.frag  cpuheight.vert  cube.frag  cube.vert  cullface.frag  cullface.vert  floor.frag  floor.vert  floorgenerator.frag  fragment.glsl  geometry.frag  geometry.geom  geometry.vert  grid.frag  grid.vert  instance.frag  instance.vert  light.vert  model.frag  model.vert  normalshow.geom  postprocessing_default.frag  screen.frag  screen.vert  shadowmap.vert  skybox.frag  skybox.vert  stencil.frag  stencil.vert
src/: buffer.h  camera.cpp  camera.h  context.cpp  context.h  cube.cpp  cube.h  event.cpp  event.h  framebuffer.cpp  framebuffer.h  inputcontroller.cpp  inputcontroller.h  justmesh.cpp  justmesh.h  light.cpp  light.h  main.cpp  material.h  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  meshbuffer.cpp  meshbuffer.h  model.cpp  model.h  modelloader.cpp  modelloader.h  normalmap.cpp  normalmap.h  object.cpp  object.h  rectangle.cpp  rectangle.h  renderbuffer.cpp  renderbuffer.h  scene.cpp  scene.h  shader.cpp  (+19 more)
